reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__debug_reports.rs_line_578_col_5.log

*** crates/tracewake-core/src/debug_reports.rs:578:5: replace stuck_view -> Phase3AStuckDiagnosticView with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/debug_reports.rs
+++ replace stuck_view -> Phase3AStuckDiagnosticView with Default::default()
@@ -570,55 +570,17 @@
         .stuck_diagnostics
         .values()
         .filter(|diagnostic| &diagnostic.actor_id == actor_id)
         .map(stuck_view)
         .collect()
 }
 
 fn stuck_view(diagnostic: &crate::agent::StuckDiagnosticRecord) -> Phase3AStuckDiagnosticView {
-    Phase3AStuckDiagnosticView {
-        diagnostic_id: diagnostic.diagnostic_id.as_str().to_string(),
-        actor_id: diagnostic.actor_id.clone(),
-        window_start_tick: diagnostic.window_start_tick,
-        window_end_tick: diagnostic.window_end_tick,
-        active_need: diagnostic
-            .active_need
-            .map(|need| need.stable_id().to_string()),
-        active_goal_id: diagnostic
-            .active_goal_id
-            .as_ref()
-            .map(|id| id.as_str().to_string()),
-        active_intention_id: diagnostic
-            .active_intention_id
-            .as_ref()
-            .map(|id| id.as_str().to_string()),
-        routine_template_id: diagnostic
-            .routine_template_id
-            .as_ref()
-            .map(|id| id.as_str().to_string()),
-        routine_execution_id: diagnostic
-            .routine_execution_id
-            .as_ref()
-            .map(|id| id.as_str().to_string()),
-        routine_step: diagnostic
-            .routine_step
-            .as_ref()
-            .map(crate::agent::RoutineStep::serialize_canonical),
-        attempted_action: diagnostic
-            .attempted_action
-            .as_ref()
-            .map(|id| id.as_str().to_string()),
-        blocker_category: diagnostic.blocker_category.stable_id().to_string(),
-        concrete_blocker: diagnostic.concrete_blocker.clone(),
-        actor_known_explanation: diagnostic.actor_known_explanation.clone(),
-        debug_only_details: diagnostic.debug_only_details.clone(),
-        retry_abandon_fallback_outcome: diagnostic.retry_abandon_fallback_outcome.clone(),
-        resulting_status: diagnostic.resulting_status.stable_id().to_string(),
-    }
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 fn render_decision_trace_row(trace: &Phase3ADecisionTraceView) -> String {
     format!(
         "trace={} actor={} outcome={} candidates={} actor_known_only={} hidden_truth_notes={}",
         trace.trace_id,
         trace.actor_id.as_str(),
         trace.outcome,


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/debug_reports.rs` has changed (1781904429.423923615s, 4s after last build at 1781904425.303923615s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `Phase3AStuckDiagnosticView: Default` is not satisfied
   --> crates/tracewake-core/src/debug_reports.rs:578:5
    |
578 |     Default::default() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `Phase3AStuckDiagnosticView`
   --> crates/tracewake-core/src/debug_reports.rs:155:1
    |
155 | pub struct Phase3AStuckDiagnosticView {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
